--- a/views/css/style.css
+++ b/views/css/style.css
@@ -33,11 +33,13 @@ form {
   position: fixed;
   width: 256px;
   z-index: -1;
+  will-change: left;
 }
 
 .randomPizzaContainer {
   float: left;
   display: flex;
+  
 }
 
 .randomPizzaContainer:after {
